commit with notebook

--- a/tests/image_search.ipynb
+++ b/tests/image_search.ipynb
@@ -252,6 +252,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for m in load_model_info():\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'affable-shark'"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m['nickname']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
    "outputs": [],
@@ -491,26 +521,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_similarity(img1 : torch.Tensor, img2 : torch.Tensor) -> float:\n",
+    "    diff = loss_fn_vgg(img1, img2)\n",
+    "    diff = diff.detach().numpy()[0][0][0][0]\n",
+    "    sim = 1 - diff # Closer to 1 = more similar\n",
+    "    return(sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.39311284"
+       "0.6516184508800507"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "i1 = 2\n",
-    "i2 = 10\n",
+    "i2 = 7\n",
     "sim = loss_fn_vgg(resized_images[i1], resized_images[i2]).detach().numpy()[0][0][0][0]\n",
-    "sim"
+    "1 - sim"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 1400, 3)"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imread(\"/Users/gkreder/Downloads/microscopy-fruit-fly-neurosciencenews.jpeg\").shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "import PIL as pillow\n",
+    "import cv2\n",
+    "\n",
+    "image_embedder = ImageProcessor()\n",
+    "user_img_path = \"/Users/gkreder/Downloads/microscopy-fruit-fly-neurosciencenews.jpeg\"\n",
+    "user_img = cv2.imread(user_img_path)\n",
+    "user_img_axes = \"cyx\"\n",
+    "user_image_resized = image_embedder.resize_image(user_img, user_img_axes, output_format = \"bcyx\") # https://github.com/richzhang/PerceptualSimilarity\n",
+    "user_torch = torch.from_numpy(preprocess_input(user_image_resized).copy()).to(torch.float32)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 44/44 [00:05<00:00,  8.42it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_sim(img1, img2):\n",
+    "    s = loss_fn_vgg(img1, img2)\n",
+    "    return(s.detach().numpy()[0][0][0][0])\n",
+    "\n",
+    "sims = [get_sim(user_torch, x) for x in tqdm(resized_images)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'attachments': {'files': []},\n",
+       " 'authors': [{'name': 'A. Wolny'}, {'name': 'V. Bondarenko'}],\n",
+       " 'cite': [{'text': 'V. Bondarenko et al. Ex vivo Engineering Uterine Environment for Peri-implantation Mouse Development',\n",
+       "   'url': 'https://github.com/kreshuklab/mouse-embryo-seg'}],\n",
+       " 'config': {'bioimageio': {'created': '2023-03-27 12:11:52.357154',\n",
+       "   'doi': '10.5281/zenodo.7774490',\n",
+       "   'nickname': 'powerful-fish',\n",
+       "   'nickname_icon': '🐟',\n",
+       "   'owners': [66700],\n",
+       "   'status': 'accepted',\n",
+       "   'version_id': '7774490',\n",
+       "   'version_name': 'version 4'},\n",
+       "  'deepimagej': {'allow_tiling': True,\n",
+       "   'model_keys': None,\n",
+       "   'prediction': {'postprocess': [{'spec': None}],\n",
+       "    'preprocess': [{'spec': None}]},\n",
+       "   'pyramidal_model': False,\n",
+       "   'test_information': {'inputs': [{'name': 'test_input.npy',\n",
+       "      'pixel_size': {'x': 1.0, 'y': 1.0, 'z': 1.0},\n",
+       "      'size': '128 x 128 x 32 x 1'}],\n",
+       "    'memory_peak': None,\n",
+       "    'outputs': [{'name': 'test_output.npy',\n",
+       "      'size': '128 x 128 x 32 x 1',\n",
+       "      'type': 'image'}],\n",
+       "    'runtime': None}}},\n",
+       " 'covers': ['https://zenodo.org/api/records/7774490/files/raw.png/content',\n",
+       "  'https://zenodo.org/api/records/7774490/files/pred.png/content'],\n",
+       " 'description': 'A 3D U-Net trained to predict the cell boundaries in live light sheet images of developing mouse embryo. Voxel size: 0.2×0.2×1.0 µm^3',\n",
+       " 'documentation': 'https://zenodo.org/api/records/7774490/files/unet3d.md/content',\n",
+       " 'format_version': '0.4.9',\n",
+       " 'id': '10.5281/zenodo.6384845/7774490',\n",
+       " 'inputs': [{'axes': 'bczyx',\n",
+       "   'data_range': [-inf, inf],\n",
+       "   'data_type': 'float32',\n",
+       "   'name': 'raw',\n",
+       "   'shape': [1, 1, 32, 128, 128]}],\n",
+       " 'license': 'MIT',\n",
+       " 'links': ['deepimagej/deepimagej', 'imjoy/BioImageIO-Packager'],\n",
+       " 'maintainers': [{'github_user': 'wolny'}],\n",
+       " 'name': '3D UNet Mouse Embryo Live',\n",
+       " 'outputs': [{'axes': 'bczyx',\n",
+       "   'data_range': [0.0, 1.0],\n",
+       "   'data_type': 'float32',\n",
+       "   'halo': [0, 0, 8, 16, 16],\n",
+       "   'name': 'output0',\n",
+       "   'shape': {'offset': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "    'reference_tensor': 'raw',\n",
+       "    'scale': [1.0, 1.0, 1.0, 1.0, 1.0]}}],\n",
+       " 'rdf_source': 'https://bioimage-io.github.io/collection-bioimage-io/rdfs/10.5281/zenodo.6384845/7774490/rdf.yaml',\n",
+       " 'sample_inputs': ['https://zenodo.org/api/records/7774490/files/sample_input_0.tif/content'],\n",
+       " 'sample_outputs': ['https://zenodo.org/api/records/7774490/files/sample_output_0.tif/content'],\n",
+       " 'tags': ['3d',\n",
+       "  'torchscript',\n",
+       "  'ilastik',\n",
+       "  'unet',\n",
+       "  'live',\n",
+       "  'plantseg',\n",
+       "  'mouse-embryo',\n",
+       "  'cell-membrane',\n",
+       "  'animal',\n",
+       "  'tissue',\n",
+       "  'light-sheet-microscopy',\n",
+       "  'semantic-segmentation',\n",
+       "  'deepimagej',\n",
+       "  'pytorch'],\n",
+       " 'test_inputs': ['https://zenodo.org/api/records/7774490/files/test_input.npy/content'],\n",
+       " 'test_outputs': ['https://zenodo.org/api/records/7774490/files/test_output.npy/content'],\n",
+       " 'timestamp': '2022-11-18T22:04:18.132270',\n",
+       " 'type': 'model',\n",
+       " 'weights': {'pytorch_state_dict': {'architecture': 'https://zenodo.org/api/records/7774490/files/unet.py/content:UNet3D',\n",
+       "   'architecture_sha256': '2da9f7149e144b63fee715fb8fe5154e96bf9aa230d176c91e923d528ef0c4e1',\n",
+       "   'kwargs': {'f_maps': [32, 64, 128, 256, 512],\n",
+       "    'final_sigmoid': True,\n",
+       "    'in_channels': 1,\n",
+       "    'is_segmentation': True,\n",
+       "    'layer_order': 'gcr',\n",
+       "    'num_groups': 8,\n",
+       "    'out_channels': 1,\n",
+       "    'testing': True},\n",
+       "   'pytorch_version': '1.12.1',\n",
+       "   'sha256': 'dc267bebbd34da4a66ae55c15a4e056ae883f0bcc30176e5548625491690baf7',\n",
+       "   'source': 'https://zenodo.org/api/records/7774490/files/unet-bce-dice-cell-boundary-311021.pytorch/content'},\n",
+       "  'torchscript': {'pytorch_version': '1.13.0',\n",
+       "   'sha256': '81543061236a71bed490d0bf2602a58c6e73ccff825ded132e1048a3f04f6976',\n",
+       "   'source': 'https://zenodo.org/api/records/7774490/files/torchscript_tracing.pt/content'}}}"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_metadata[np.argmin(sims)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(730, 1000, 3)"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imread(\"/USers/gkreder/Downloads/nuclear_blue_image.jpg\").shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
