Fixed image embedder wasnt in eval mode

--- a/tests/2023-12-04_test-image-prep.ipynb
+++ b/tests/2023-12-04_test-image-prep.ipynb
@@ -47,11 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 1400, 3)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# input_image = cv2.imread(\"../tmp/user_input.jpeg\")"
+    "input_image = cv2.imread(\"../tmp/user_input.jpeg\")\n",
+    "input_image.shape"
    ]
   },
   {
@@ -144,23 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a7a42650>"
+       "<matplotlib.image.AxesImage at 0x2a2865a20>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,22 +196,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 224, 224, 4)"
+       "array([[[6.15839389e-05, 5.91930404e-02, 1.33820752e-01],\n",
+       "        [6.15839389e-05, 2.86838551e-01, 5.00213419e-01],\n",
+       "        [6.15839389e-05, 2.33132694e-01, 2.48683747e-01],\n",
+       "        ...,\n",
+       "        [6.15839389e-05, 4.84454902e-03, 7.81813034e-02],\n",
+       "        [6.15839389e-05, 3.61806161e-02, 1.26238339e-01],\n",
+       "        [6.15839389e-05, 5.91930404e-02, 3.12341684e-01]],\n",
+       "\n",
+       "       [[6.15839389e-05, 3.50956544e-01, 5.63002047e-01],\n",
+       "        [6.15839389e-05, 3.06668406e-01, 4.91765165e-01],\n",
+       "        [6.15839389e-05, 1.20629399e-01, 2.96740990e-01],\n",
+       "        ...,\n",
+       "        [6.15839389e-05, 1.32086118e-01, 2.78638585e-01],\n",
+       "        [6.15839389e-05, 5.47252027e-02, 9.84928908e-02],\n",
+       "        [6.15839389e-05, 9.38602177e-02, 7.98553970e-02]],\n",
+       "\n",
+       "       [[6.15839389e-05, 1.87840220e-01, 4.56394701e-01],\n",
+       "        [6.15839389e-05, 1.39124493e-01, 2.90840788e-01],\n",
+       "        [6.15839389e-05, 1.34014021e-01, 1.34135062e-01],\n",
+       "        ...,\n",
+       "        [6.15839389e-05, 3.45042848e-01, 4.91595315e-01],\n",
+       "        [6.15839389e-05, 4.39693683e-01, 4.39814725e-01],\n",
+       "        [6.15839389e-05, 1.47448136e-01, 1.47569177e-01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[6.15839389e-05, 7.70949927e-02, 9.13550888e-02],\n",
+       "        [6.15839389e-05, 1.26975646e-01, 1.72034292e-01],\n",
+       "        [6.15839389e-05, 4.06484538e-02, 2.68100902e-01],\n",
+       "        ...,\n",
+       "        [0.00000000e+00, 3.55544724e-01, 4.87895554e-01],\n",
+       "        [6.15839389e-05, 1.35960815e-01, 7.24441005e-01],\n",
+       "        [6.15839389e-05, 2.22911750e-01, 6.59806628e-01]],\n",
+       "\n",
+       "       [[6.15839389e-05, 9.44746534e-02, 8.68872511e-02],\n",
+       "        [6.15839389e-05, 5.91930404e-02, 8.88216740e-02],\n",
+       "        [6.15839389e-05, 3.61806161e-02, 6.58092497e-02],\n",
+       "        ...,\n",
+       "        [6.15839389e-05, 4.47344090e-01, 5.18098930e-01],\n",
+       "        [6.15839389e-05, 3.55544724e-01, 5.47033686e-01],\n",
+       "        [6.15839389e-05, 3.16367058e-01, 4.10212003e-01]],\n",
+       "\n",
+       "       [[6.15839389e-05, 1.09073694e-01, 2.15790912e-01],\n",
+       "        [6.15839389e-05, 5.91930404e-02, 1.50480247e-01],\n",
+       "        [6.15839389e-05, 1.09073694e-01, 2.77449484e-01],\n",
+       "        ...,\n",
+       "        [6.15839389e-05, 4.79965425e-01, 5.36581211e-01],\n",
+       "        [6.15839389e-05, 4.01961876e-01, 6.50008165e-01],\n",
+       "        [6.15839389e-05, 1.51915973e-01, 1.94392704e-01]]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resized_image.shape"
+    "resized_image.astype('float')"
    ]
   },
   {
@@ -285,10 +345,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db = pkl.load(open('../tmp/image_db/db.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3, 224, 224])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bcyx'"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db[0][2]['inputs'][0]['axes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4096,)"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ip.embed_image(db[0][0].numpy(), 'bcyx').shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array_equal(ip.embed_image(db[0][0].numpy(), 'bcyx'), ip.embed_image(db[0][0].numpy(), 'bcyx'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ip.embedder.model.training"
+   ]
   }
  ],
  "metadata": {
