debugging representative set runtime

--- a/tests/2023-12-07_test-cellpose.ipynb
+++ b/tests/2023-12-07_test-cellpose.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,24 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Function to compute pairwise cosine distances\n",
-    "# def compute_pairwise_distances(embedded_db : list):\n",
-    "#     n = len(embedded_db)\n",
-    "#     distances = np.zeros((n, n))\n",
-    "#     for i in range(n):\n",
-    "#         for j in range(n):\n",
-    "#             if i != j:\n",
-    "#                 distances[i, j] = cosine(embedded_db[i][2], embedded_db[j][2])\n",
-    "#             else:\n",
-    "#                 # distances[i, j] = np.inf  # Set the diagonal to infinity\n",
-    "#                 distances[i, j] = 0  # Set the diagonal to infinity\n",
-    "#     return distances\n",
-    "\n",
-    "# Function to find the minimum distance to any vector in the representative_db\n",
     "def min_distance_to_representative(vector : list, representative_db : list):\n",
     "    min_distance = np.inf\n",
     "    for _, _, rep_vector in representative_db:\n",
@@ -95,54 +81,30 @@
     "        safety_counter += 1\n",
     "        if safety_counter > safety_iter * len(input_files):\n",
     "            sys.exit('Error - sampling loop iterations exceeded past safety number')\n",
-    "    return([v[1] for v in representative_db])\n",
-    "\n",
-    "    # # Compute pairwise distances\n",
-    "    # pairwise_distances = compute_pairwise_distances(embedded_db)\n"
+    "    return([v[1] for v in representative_db])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 68/68 [00:04<00:00, 14.28it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_files = [os.path.join(cellpose_test_dir, x) for x in os.listdir(cellpose_test_dir) if x.endswith('_img.png')]\n",
-    "representative_images = get_representative_images(input_files, verbose = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 25/25 [00:16<00:00,  1.55it/s]\n"
+      "100%|██████████| 68/68 [00:04<00:00, 13.62it/s]\n",
+      "100%|██████████| 25/25 [00:38<00:00,  1.54s/it]\n"
      ]
     }
    ],
    "source": [
     "db_path = \"../tmp/image_db/\"\n",
-    "out_dir = \"/Users/gkreder/Downloads/cellpose_test_representative_search\"\n",
+    "out_dir = \"/Users/gkreder/Downloads/cellpose_test_representative_search_multicol\"\n",
     "suffix = \"cellpose_test\"\n",
+    "cellpose_test_dir = \"/Users/gkreder/Downloads/test\"\n",
+    "input_files = [os.path.join(cellpose_test_dir, x) for x in os.listdir(cellpose_test_dir) if x.endswith('_img.png')]\n",
+    "representative_images = get_representative_images(input_files, verbose = True)\n",
     "fig, axes = test_images(representative_images, out_dir, suffix, db_path, single_output_file=True)"
    ]
   }
