--- a/tests/test_show_score_result.ipynb
+++ b/tests/test_show_score_result.ipynb
@@ -50,15 +50,15 @@
       "       'Date - when it was retrieved',\n",
       "       'GPT-3.5-turbo Answer (With Context)- GT',\n",
       "       'GPT-4-turbo Answer (With Context)- GT', 'GT: Retrieved channel id',\n",
-      "       'GPT-3.5-tubor Answer (Without Context)', 'GPT-4 Answer',\n",
-      "       'BMZ Chatbot Answer', 'BMZ Chatbot Answer References',\n",
-      "       'GPT-3.5-tubor Answer (Without Context)- Answer Similarity Score',\n",
-      "       'GPT4 Direct Answer - Answer Similarity Score',\n",
-      "       'BMZ Chatbot Answer - Similarity Score',\n",
-      "       'BMZ Chatbot Answer - Retrieval Precision',\n",
-      "       'BMZ Chatbot Answer - Augmentation Accuracy',\n",
-      "       'BMZ Chatbot Answer - Augmentation Precision',\n",
-      "       'BMZ Chatbot Answer - Augmentation Consistency', 'Comment From Wanlu',\n",
+      "       'GPT-3.5-turbo Answer (Without Context)', 'GPT-4 Answer',\n",
+      "       'BioImage.IO Chatbot Answer', 'BioImage.IO Chatbot Answer References',\n",
+      "       'GPT-3.5-turbo Answer (Without Context) - Answer Similarity Score',\n",
+      "       'ChatGPT-4 Answer (Without Context) - Answer Similarity Score',\n",
+      "       'BioImage.IO Chatbot Answer - Similarity Score',\n",
+      "       'BioImage.IO Chatbot Answer - Retrieval Precision',\n",
+      "       'BioImage.IO Chatbot Answer - Augmentation Accuracy',\n",
+      "       'BioImage.IO Chatbot Answer - Augmentation Precision',\n",
+      "       'BioImage.IO Chatbot Answer - Augmentation Consistency', 'Comment From Wanlu',\n",
       "       'Unnamed: 20', 'Unnamed: 21', 'Unnamed: 22', 'Unnamed: 23',\n",
       "       'Unnamed: 24', 'Unnamed: 25'],\n",
       "      dtype='object')\n"
@@ -118,9 +118,9 @@
     "    #    'Chatbot Answer Augmentation Precision',\n",
     "    #    'Chatbot Answer Augmentation Consistency'\n",
     "plt.figure(figsize=(5,5))\n",
-    "plt.plot(score_result['GPT-3.5-tubor Answer (Without Context)- Answer Similarity Score'], label='ChatGPT-3.5 Direct Answer Similarity Score')\n",
-    "plt.plot(score_result['GPT4 Direct Answer - Answer Similarity Score'], label='GPT4 Direct Answer Similarity Score')\n",
-    "plt.plot(score_result['BMZ Chatbot Answer - Similarity Score'], label='Chatbot Answer Similarity Score')\n",
+    "plt.plot(score_result['GPT-3.5-turbo Answer (Without Context) - Answer Similarity Score'], label='ChatGPT-3.5 Direct Answer Similarity Score')\n",
+    "plt.plot(score_result['ChatGPT-4 Answer (Without Context) - Answer Similarity Score'], label='ChatGPT-4 Answer Similarity Score')\n",
+    "plt.plot(score_result['BioImage.IO Chatbot Answer - Similarity Score'], label='Chatbot Answer Similarity Score')\n",
     "plt.xlabel('Question Index')\n",
     "plt.ylabel('Similarity Score')\n",
     "plt.legend()\n",
@@ -149,9 +149,9 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# Plotting histograms with transparency\n",
-    "plt.hist(score_result['GPT-3.5-tubor Answer (Without Context)- Answer Similarity Score'], bins=5, label='ChatGPT-3.5 Direct Answer Similarity Score', alpha=0.5)\n",
-    "plt.hist(score_result['GPT4 Direct Answer - Answer Similarity Score'], bins=5, label='GPT4 Direct Answer Similarity Score', alpha=0.5)\n",
-    "plt.hist(score_result['BMZ Chatbot Answer - Similarity Score'], bins=5, label='BMZ Chatbot Answer Similarity Score', alpha=0.5)\n",
+    "plt.hist(score_result['GPT-3.5-turbo Answer (Without Context) - Answer Similarity Score'], bins=5, label='ChatGPT-3.5 Direct Answer Similarity Score', alpha=0.5)\n",
+    "plt.hist(score_result['ChatGPT-4 Answer (Without Context) - Answer Similarity Score'], bins=5, label='ChatGPT-4 Answer Similarity Score', alpha=0.5)\n",
+    "plt.hist(score_result['BioImage.IO Chatbot Answer - Similarity Score'], bins=5, label='BioImage.IO Chatbot Answer Similarity Score', alpha=0.5)\n",
     "\n",
     "plt.xlabel('Similarity Score')\n",
     "plt.ylabel('Frequency')\n",
@@ -189,9 +189,9 @@
    "source": [
     "# plot histo of three similarity scores, make bar in parallel\n",
     "plt.figure(figsize=(5,5))\n",
-    "plt.hist(score_result['GPT-3.5-tubor Answer (Without Context)- Answer Similarity Score'], bins=20, label='ChatGPT-3.5 Direct Answer Similarity Score')\n",
-    "plt.hist(score_result['GPT4 Direct Answer - Answer Similarity Score'], bins=20, label='GPT4 Direct Answer Similarity Score')\n",
-    "plt.hist(score_result['BMZ Chatbot Answer - Similarity Score'], bins=20, label='Chatbot Answer Similarity Score')\n",
+    "plt.hist(score_result['GPT-3.5-turbo Answer (Without Context) - Answer Similarity Score'], bins=20, label='ChatGPT-3.5 Direct Answer Similarity Score')\n",
+    "plt.hist(score_result['ChatGPT-4 Answer (Without Context) - Answer Similarity Score'], bins=20, label='ChatGPT-4 Answer Similarity Score')\n",
+    "plt.hist(score_result['BioImage.IO Chatbot Answer - Similarity Score'], bins=20, label='Chatbot Answer Similarity Score')\n",
     "plt.xlabel('Similarity Score')\n",
     "plt.ylabel('Frequency')"
    ]
@@ -214,10 +214,10 @@
    ],
    "source": [
     "# get the mean of three similarity scores\n",
-    "mean1 = score_result['GPT-3.5-tubor Answer (Without Context)- Answer Similarity Score'].mean()\n",
-    "mean2 = score_result['GPT4 Direct Answer - Answer Similarity Score'].mean()\n",
-    "mean3 = score_result['BMZ Chatbot Answer - Similarity Score'].mean()\n",
-    "labels = ['ChatGPT-3.5', 'GPT4', 'BMZ Chatbot']\n",
+    "mean1 = score_result['GPT-3.5-turbo Answer (Without Context) - Answer Similarity Score'].mean()\n",
+    "mean2 = score_result['ChatGPT-4 Answer (Without Context) - Answer Similarity Score'].mean()\n",
+    "mean3 = score_result['BioImage.IO Chatbot Answer - Similarity Score'].mean()\n",
+    "labels = ['ChatGPT-3.5', 'GPT4', 'BioImage.IO Chatbot']\n",
     "# plot 3 mean values in the plot\n",
     "plt.bar(range(3), [mean1, mean2, mean3], color='orange', label='Mean')\n",
     "# Adding labels and title\n",
