--- a/docs/bioimage-chatbot-extension-tutorial.ipynb
+++ b/docs/bioimage-chatbot-extension-tutorial.ipynb
@@ -59,7 +59,7 @@
         "\n",
         "async def setup():\n",
         "    chatbot = await api.createWindow(\n",
-        "        src=\"http://127.0.0.1:9003/public/apps/bioimageio-chatbot-client/chat\",\n",
+        "        src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\",\n",
         "        name=\"BioImage.IO Chatbot\",\n",
         "    )\n",
         "    \n",
